maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:12: error: ';' expected but 'else' found.
    else{
    ^